--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CO₂ Challenge - Individual Carbon Footprint Reduction</title>
-    <meta name="description" content="Track your sustainable habits and measure CO₂ savings during your internship. Join the carbon footprint reduction challenge." />
-    <meta name="author" content="Lovable" />
-    <meta name="keywords" content="carbon footprint, sustainability, CO2 reduction, green habits, environmental challenge" />
-
-    <meta property="og:title" content="CO₂ Challenge - Individual Carbon Footprint Reduction" />
-    <meta property="og:description" content="Track your sustainable habits and measure CO₂ savings during your internship. Join the carbon footprint reduction challenge." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta name="twitter:title" content="CO₂ Challenge - Individual Carbon Footprint Reduction" />
-    <meta name="twitter:description" content="Track sustainable habits and measure your environmental impact" />
+    <link rel="icon" type="image/svg+xml" href="/EarthIcon.png" />
   </head>
 
   <body>
